k8s/identity-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: identity-api
  namespace: chomage
spec:
  replicas: 1
  selector:
    matchLabels:
      app: identity-api
  template:
    metadata:
      labels:
        app: identity-api
    spec:
      serviceAccountName: identity-sa
      restartPolicy: Always
      affinity:
        podAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 100
            podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: app
                  operator: In
                  values:
                  - user
              topologyKey: kubernetes.io/hostname
      containers:
      - name: identity-api
        image: ffatih/identity.api:1.0
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: "0.5"
            memory: "500Mi"
          limits:
            cpu: "1"
            memory: "1500Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: identity-api
  namespace: chomage
spec:
  selector:
    app: identity-api
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
