k8s/jobs-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jobs-api
  namespace: chomage
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jobs-api
  template:
    metadata:
      labels:
        app: jobs-api
    spec:
      containers:
      - name: jobs-api
        image: ffatih/jobs.api:1.0
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: jobs-api
  namespace: chomage
spec:
  selector:
    app: jobs-api
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
