k8s/rabbitmq.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq
  namespace: chomage
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rabbitmq
  template:
    metadata:
      labels:
        app: rabbitmq
    spec:
      containers:
      - name: rabbitmq
        image: rabbitmq:3-management
        ports:
        - containerPort: 5672
        - containerPort: 15672
        volumeMounts:
        - name: rabbitmq-config-volume
          mountPath: /etc/rabbitmq/rabbitmq.config
          subPath: rabbitmq.config
      volumes:
      - name: rabbitmq-config-volume
        configMap:
          name: rabbitmq-config
---
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq
  namespace: chomage
spec:
  selector:
    app: rabbitmq
  ports:
  - port: 5672
    targetPort: 5672
    name: amqp
  - port: 15672
    targetPort: 15672
    name: management
